# ScamNest

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  API_SPEC.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci-cd.yml
app/: config.py
app/ai_model/: spam_detection_model_training.ipynb  train_scam_model.py
app/ai_model/models/: spam_model.pkl  tfidf_vectorizer.pkl
app/models/: schemas.py
app/routers/: honeypot.py
app/scripts/: test_model_inference.py  validate_model.py
app/services/: __init__.py  agent_service.py  callback_service.py  data_masker.py  intent_scorer.py  lang_detector.py  llm_scam_validator.py  model_predictor.py  preliminary_model_prediction.py  risk_aggregator.py  scam_detector.py  scam_detector_hybrid.py  session_service.py  translator.py
docs/: API_SPEC.md  ARCHITECTURE.md  FEATURES_V1.2.0.md  MVP_COMPLIANCE_REPORT.md  REFACTORING_GUIDE.md
tests/: test_api.py  test_services.py
