# ============================================================================
# ScamNest - Python Project Configuration
# ============================================================================
# Modern Python project configuration using pyproject.toml (PEP 518)
# ============================================================================

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scamnest"
version = "1.0.0"
description = "AI-powered agentic honeypot system for scam detection and intelligence gathering"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Adarsh Naik", email = "contact-via-github@example.com"}
]
keywords = ["honeypot", "scam-detection", "ai", "cybersecurity", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.3.0",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "bandit>=1.7.5",
    "pre-commit>=3.3.3",
]

[project.urls]
Homepage = "https://github.com/adarshnaik1/ScamNest"
Documentation = "https://github.com/adarshnaik1/ScamNest/blob/main/README.md"
Repository = "https://github.com/adarshnaik1/ScamNest"
Issues = "https://github.com/adarshnaik1/ScamNest/issues"

# ============================================================================
# Tool Configurations
# ============================================================================

# Black - Code Formatter
# ----------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# isort - Import Sorting
# ----------------------------------------------------------------------------
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
split_on_trailing_comma = true
skip_gitignore = true
known_first_party = ["app"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# MyPy - Type Checking
# ----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true for strict mode
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "joblib.*",
    "pandas.*",
    "numpy.*",
]
ignore_missing_imports = true

# Pytest - Testing Framework
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "-ra",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/virtualenv/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# Bandit - Security Linter
# ----------------------------------------------------------------------------
[tool.bandit]
targets = ["app"]
exclude_dirs = ["/tests", "/venv"]
skips = ["B101"]  # Skip assert_used test (fine in test code)

# Pylint - Advanced Linter
# ----------------------------------------------------------------------------
[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0103",  # Invalid name
    "C0114",  # Missing module docstring
    "C0115",  # Missing class docstring
    "C0116",  # Missing function docstring
    "R0903",  # Too few public methods
    "W0212",  # Access to protected member
]

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "id", "df"]

# ============================================================================
# Setuptools Configuration (for editable installs)
# ============================================================================

[tool.setuptools]
package-dir = {"" = "."}
packages = ["app"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "docs*"]

# ============================================================================
# Usage Examples
# ============================================================================
#
# Install in editable mode:
#   pip install -e .
#
# Install with dev dependencies:
#   pip install -e ".[dev]"
#
# Run formatters:
#   black .
#   isort .
#
# Run linters:
#   flake8
#   mypy app
#   pylint app
#   bandit -r app
#
# Run tests:
#   pytest
#   pytest --cov
#   pytest -m "not slow"
#
# ============================================================================
